cmake_minimum_required(VERSION 3.28)

add_subdirectory(lesson_1) # SFML 윈도우 열기
add_subdirectory(lesson_2) # 움직이는 공 만들기
add_subdirectory(lesson_3) # 페인트 및 보간 (클래스 활용)
add_subdirectory(lesson_4) # 미니 RPG 시스템 (상속 활용)
add_subdirectory(lesson_5) # 미니 레스토랑 시스템(enum 활용)
add_subdirectory(lesson_6) # 도형 생성기(상속 및 스마트포인터)
add_subdirectory(lesson_7) # 인벤토리 시스템(제네릭)
add_subdirectory(lesson_8) # 게임 세이브/로드(에러 핸들링)
add_subdirectory(code_test) # 학생분 코드